# grass-renderer

./: .gitignore  CMakeLists.txt  README.md  main.cpp
shaders/: blade.frag.wgsl  blade.vert.wgsl  blade.wgsl  blade_save.vert.wgsl  common.wgsl  common_structs.wgsl  full_screen_quad.vert.wgsl  gen.compute.wgsl  grass.compute.wgsl  grass_position.compute.wgsl  move.compute.wgsl  phong.frag.wgsl  phong.vert.wgsl  screen_space_shadows.frag.wgsl  simple_triangle.wgsl  sky.frag.wgsl
src/: Camera.cpp  Camera.h  ComputeManager.cpp  ComputeManager.h  Context.h  Engine.cpp  Engine.h  GPUContext.cpp  GPUContext.h  GlobalConfig.h  GrassSettings.h  Material.h  Mesh.cpp  Mesh.h  PhongMaterial.cpp  PhongMaterial.h  Renderer.cpp  Renderer.h  Utils.cpp  Utils.h  layouts.h  uniforms.h  utils.h
